--- a/src/compile/CMakeLists.txt
+++ b/src/compile/CMakeLists.txt
@@ -4,6 +4,7 @@ target_sources(
     "${CMAKE_CURRENT_SOURCE_DIR}/compile-ctx.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/compile-pass.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/compile.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/pass0.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/pass1.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/pass2.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/print.cpp"
