--- a/src/cish/CMakeLists.txt
+++ b/src/cish/CMakeLists.txt
@@ -2,7 +2,7 @@
 target_sources(
     ${PROJECT_NAME} PUBLIC
     "${CMAKE_CURRENT_SOURCE_DIR}/keyword.cpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/symbol.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/symtab.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/token-stream.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/token.cpp"
 )
